feat:完善启动脚本